# watchdog

./: .gitignore  package-lock.json  package.json
src/: App.tsx  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/database/: mod.rs  sqlite_connector.rs
src-tauri/src/services/: media.rs  mod.rs  user.rs  windows.rs
src-tauri/src/types/: enums.rs  structs.rs
src/app/: store.ts
src/constants/: index.ts
src/features/: index.ts
src/features/charts/: index.ts
src/features/charts/assets/: usagePieChart.css
src/features/charts/components/: usageBarGraph.tsx  usagePieChart.tsx
src/features/history/: index.ts
src/features/history/components/: usageHistoryt.tsx
src/features/navigation/: index.ts
src/features/navigation/assets/: navBar.css
src/features/navigation/components/: navBar.tsx
src/features/pieChart/components/: usagePieChart.tsx
src/features/statistics/: index.ts
src/features/statistics/assets/: usageStatistics.css
src/features/statistics/components/: usageStatistics.tsx
src/hooks/: index.ts
src/pages/: history.tsx  home.tsx  index.ts  user.tsx
src/slices/: graphSlice.ts  index.ts  userSlice.ts
src/types/: index.ts
src/utils/: index.ts
