[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.3", features = [] }
fern = "0.6"
chrono = "0.4"
log = "^0.4"
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-native-tls", "sqlite"] }
tokio = { version = "1.34.0", features = ["full"] }
thiserror = "1.0"

[dependencies.windows]
version = "0.52"
features = [
    "Win32_Foundation",
    "Win32_System_WindowsProgramming",
    "Win32_System_Threading",
    "Win32_UI",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_ProcessStatus",
    "Win32_Media",
    "Win32_System_Com",
    "Win32_Media_Audio",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
]

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
